# research_push

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.obsidian/: appearance.json
.obsidian/snippets/: research-push.css
.system/config/: scoring.yaml  sources.yaml  zotero.yaml
.system/research_push/: cli.py  config.py  db.py  exporter.py  feedback.py  llm.py  paper_files.py  paths.py  pdfs.py  provenance.py  server.py  sources.py  zotero_sync.py
.system/scripts/: install_windows_task.ps1  run_daily.ps1
Knowledge/: README.md
Knowledge/Daily/: 2026-05-30.md
Knowledge/Feedback/: reading_preferences.md
Knowledge/Overall/: Codex Operating Rules.md  Knowledge Map.md  README.md  Source Setup Guide.md  Zotero Integration.md
Knowledge/Topics/mesh_compression/Daily/: 2026-05-30.md
Knowledge/Topics/mesh_compression/Papers/: 2026_cnr-isti-vclab-corto_5447758c4ec82372ae412e1a74f732188e2f64f0.md  2026_reearth-draco-oxide_e169469b4ddbc0b5aaa4a4c0c2a5af997a4305a6.md  2026_reveghis-3d-progressive-compression-and-decoding-2023_8096a343e6bfa0e9bbd740c3d798b22f19f16ca9.md  paper list.md  (+2 more)
config/: focus_profiles.yaml  llm.yaml  topics.yaml
notes/daily/: 2026-05-30.md
notes/mesh_compression/: 2026-05-30.md
notes/point_cloud_geometry_compression/: 2026-05-30.md
notes/rl_guided_generation/: 2026-05-30.md
research_push/: cli.py  config.py  exporter.py  llm.py  models.py  net.py  paths.py  pdfs.py  scoring.py  server.py  sources.py
scripts/: install_windows_task.ps1  run_daily.ps1
tests/: test_config_scoring.py  test_feedback.py
(+29 files in other folders)
